--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -6,7 +6,7 @@ on:
 env:
   # 基础配置
   REPO_URL: https://github.com/openwrt/openwrt
-  REPO_BRANCH: v24.10.5
+  REPO_TAG: v24.10.5  # 改为 TAG 而非 BRANCH，明确标识是标签
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: openwrt.config
   DIY_P1_SH: diy-part1.sh
@@ -27,15 +27,18 @@ jobs:
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo apt update -y
         sudo apt full-upgrade -y
-        sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget curl libxml2 libxml2-dev liblzma-dev libpam-dev libev-dev libsodium-dev
+        sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget curl libxml2 libxml2-dev liblzma-dev libpam-dev libev-dev
         sudo apt autoremove -y && sudo apt clean -y
         sudo timedatectl set-timezone "$TZ"
 
     - name: Clone source code
       run: |
-        git clone --depth 1 --branch $REPO_BRANCH $REPO_URL openwrt
+        # 修复1：正确克隆标签，避免detached HEAD导致的问题
+        git clone --depth 1 $REPO_URL openwrt
         cd openwrt
-        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF feeds.conf.default
+        git checkout $REPO_TAG  # 先克隆仓库，再切换到指定标签
+        # 修复2：删除无效的mv命令（原命令无意义且报错）
+        echo "Successfully cloned OpenWRT $REPO_TAG"
 
     - name: Load custom feeds
       run: |
@@ -72,6 +75,12 @@ jobs:
         cd openwrt
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@main
+      with:
+        name: OpenWRT_firmware
+        path: openwrt/bin/targets/
 
     - name: Upload artifact
       uses: actions/upload-artifact@main
