--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
 
 env:
-  # 基础配置
+  # 修复：使用官方存在的稳定版标签
   REPO_URL: https://github.com/openwrt/openwrt
-  REPO_TAG: v24.10.5  # 改为 TAG 而非 BRANCH，明确标识是标签
+  REPO_TAG: v23.05.3  # 替换为官方存在的最新稳定版
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: openwrt.config
   DIY_P1_SH: diy-part1.sh
@@ -31,14 +31,19 @@ jobs:
         sudo apt autoremove -y && sudo apt clean -y
         sudo timedatectl set-timezone "$TZ"
 
-    - name: Clone source code
+    - name: Clone source code (fix tag issue)
       run: |
-        # 修复1：正确克隆标签，避免detached HEAD导致的问题
+        # 先克隆仓库，再切换到存在的官方标签
         git clone --depth 1 $REPO_URL openwrt
         cd openwrt
-        git checkout $REPO_TAG  # 先克隆仓库，再切换到指定标签
-        # 修复2：删除无效的mv命令（原命令无意义且报错）
-        echo "Successfully cloned OpenWRT $REPO_TAG"
+        # 验证标签是否存在，避免报错
+        if git rev-parse --verify $REPO_TAG >/dev/null 2>&1; then
+          git checkout $REPO_TAG
+          echo "Successfully checked out tag: $REPO_TAG"
+        else
+          echo "Tag $REPO_TAG not found, use main branch instead"
+          git checkout main
+        fi
 
     - name: Load custom feeds
       run: |
@@ -75,12 +80,6 @@ jobs:
         cd openwrt
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@main
-      with:
-        name: OpenWRT_firmware
-        path: openwrt/bin/targets/
 
     - name: Upload artifact
       uses: actions/upload-artifact@main
