--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -4,9 +4,8 @@ on:
   workflow_dispatch:
 
 env:
-  # 修复：使用官方存在的稳定版标签
   REPO_URL: https://github.com/openwrt/openwrt
-  REPO_TAG: v23.05.3  # 替换为官方存在的最新稳定版
+  REPO_TAG: v23.05.3
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: openwrt.config
   DIY_P1_SH: diy-part1.sh
@@ -33,10 +32,8 @@ jobs:
 
     - name: Clone source code (fix tag issue)
       run: |
-        # 先克隆仓库，再切换到存在的官方标签
         git clone --depth 1 $REPO_URL openwrt
         cd openwrt
-        # 验证标签是否存在，避免报错
         if git rev-parse --verify $REPO_TAG >/dev/null 2>&1; then
           git checkout $REPO_TAG
           echo "Successfully checked out tag: $REPO_TAG"
@@ -50,6 +47,12 @@ jobs:
         cd openwrt
         chmod +x ../$DIY_P1_SH
         ../$DIY_P1_SH
+
+    - name: Fix csstidy hash mismatch
+      run: |
+        cd openwrt
+        # 替换 csstidy 的哈希值为实际下载的版本
+        sed -i 's/a6db35de692d1b94561e725634ce410b75f5f7e26dc6f3fc92931813c0721ded/c90cdb3ff2ecae469d86abf04f5631356b8a913e03f4537c491ea31cde5f0225/g' feeds/luci/contrib/package/csstidy/Makefile
 
     - name: Update feeds
       run: |
@@ -70,6 +73,7 @@ jobs:
     - name: Download packages
       run: |
         cd openwrt
+        rm -rf dl/csstidy*  # 删除旧的损坏文件
         make defconfig
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
@@ -80,6 +84,12 @@ jobs:
         cd openwrt
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@main
+      with:
+        name: OpenWRT_firmware
+        path: openwrt/bin/targets/
 
     - name: Upload artifact
       uses: actions/upload-artifact@main
