--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -26,7 +26,8 @@ jobs:
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo apt update -y
         sudo apt full-upgrade -y
-        sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget curl libxml2 libxml2-dev liblzma-dev libpam-dev libev-dev
+        # 增加内核编译依赖（关键修复）
+        sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget curl libxml2 libxml2-dev liblzma-dev libpam-dev libev-dev libelf-dev bc binutils bzip2 cpio findutils gzip libncurses-dev libssl-dev make patch perl tar xz-utils
         sudo apt autoremove -y && sudo apt clean -y
         sudo timedatectl set-timezone "$TZ"
 
@@ -48,7 +49,7 @@ jobs:
         chmod +x ../$DIY_P1_SH
         ../$DIY_P1_SH
 
-    - name: Update feeds (先拉取feeds文件)
+    - name: Update feeds
       run: |
         cd openwrt
         ./scripts/feeds update -a
@@ -56,7 +57,6 @@ jobs:
     - name: Fix csstidy hash mismatch (feeds更新后再修改文件)
       run: |
         cd openwrt
-        # 先检查文件是否存在，避免报错
         if [ -f "feeds/luci/contrib/package/csstidy/Makefile" ]; then
           sed -i 's/a6db35de692d1b94561e725634ce410b75f5f7e26dc6f3fc92931813c0721ded/c90cdb3ff2ecae469d86abf04f5631356b8a913e03f4537c491ea31cde5f0225/g' feeds/luci/contrib/package/csstidy/Makefile
           echo "csstidy hash updated successfully"
@@ -75,21 +75,32 @@ jobs:
         chmod +x ../$DIY_P2_SH
         ../$DIY_P2_SH
 
+    - name: Preprocess kernel config (关键修复：无交互生成内核配置)
+      run: |
+        cd openwrt
+        echo -e "n\n" | make kernel_oldconfig  # 自动回答所有内核配置问题
+        make defconfig
+
     - name: Download packages
       run: |
         cd openwrt
-        # 删除旧的损坏文件，确保重新下载
         rm -rf dl/csstidy*
         make defconfig
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
-    - name: Compile firmware
+    - name: Compile firmware (降低编译线程，避免内存溢出)
       run: |
         cd openwrt
-        echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 || make -j1 V=s
+        echo -e "1 thread compile (stable for mt7621)"
+        make -j1 V=s  # 单线程编译，减少内核编译错误
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@main
+      with:
+        name: OpenWRT_firmware
+        path: openwrt/bin/targets/
 
     - name: Upload artifact
       uses: actions/upload-artifact@main
