--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -26,8 +26,8 @@ jobs:
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo apt update -y
         sudo apt full-upgrade -y
-        # 补充 opkg 编译依赖
-        sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget curl libxml2 libxml2-dev liblzma-dev libpam-dev libev-dev libelf-dev bc binutils opkg-utils libjson-c-dev
+        # 移除 opkg-utils，保留 Ubuntu 22.04 存在的有效依赖
+        sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget curl libxml2 libxml2-dev liblzma-dev libpam-dev libev-dev libelf-dev bc binutils libjson-c-dev
         sudo apt autoremove -y && sudo apt clean -y
         sudo timedatectl set-timezone "$TZ"
 
@@ -51,7 +51,7 @@ jobs:
     - name: Install feeds (优先安装 opkg 相关组件)
       run: |
         cd openwrt
-        ./scripts/feeds install -y opkg luci-base luci-app-opkg  # 优先安装 opkg 组件
+        ./scripts/feeds install -y opkg luci-base luci-app-opkg  # OpenWRT 内的 opkg 组件，非系统包
         ./scripts/feeds install -a
 
     - name: Load custom configuration
@@ -76,12 +76,6 @@ jobs:
       run: |
         cd openwrt
         make -j1 V=s
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@main
-      with:
-        name: OpenWRT_firmware
-        path: openwrt/bin/targets/
 
     - name: Upload artifact
       uses: actions/upload-artifact@main
