--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -26,16 +26,19 @@ jobs:
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo apt update -y
         sudo apt full-upgrade -y
-        # 移除 opkg-utils，保留 Ubuntu 22.04 存在的有效依赖
+        # 仅保留 Ubuntu 22.04 存在的有效依赖
         sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget curl libxml2 libxml2-dev liblzma-dev libpam-dev libev-dev libelf-dev bc binutils libjson-c-dev
         sudo apt autoremove -y && sudo apt clean -y
         sudo timedatectl set-timezone "$TZ"
 
-    - name: Clone source code
+    - name: Clone source code (修复浅克隆，拉取标签)
       run: |
-        git clone --depth 1 $REPO_URL openwrt
+        # 移除 --depth 1，完整克隆仓库（包含标签）
+        git clone $REPO_URL openwrt
         cd openwrt
-        git checkout $REPO_TAG
+        # 先拉取所有标签，再切换到指定标签
+        git fetch --tags
+        git checkout tags/$REPO_TAG -b build-branch  # 创建临时分支，避免detached HEAD
 
     - name: Load custom feeds
       run: |
@@ -51,7 +54,7 @@ jobs:
     - name: Install feeds (优先安装 opkg 相关组件)
       run: |
         cd openwrt
-        ./scripts/feeds install -y opkg luci-base luci-app-opkg  # OpenWRT 内的 opkg 组件，非系统包
+        ./scripts/feeds install -y opkg luci-base luci-app-opkg
         ./scripts/feeds install -a
 
     - name: Load custom configuration
