--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -26,19 +26,16 @@ jobs:
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo apt update -y
         sudo apt full-upgrade -y
-        # 仅保留 Ubuntu 22.04 存在的有效依赖
         sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget curl libxml2 libxml2-dev liblzma-dev libpam-dev libev-dev libelf-dev bc binutils libjson-c-dev
         sudo apt autoremove -y && sudo apt clean -y
         sudo timedatectl set-timezone "$TZ"
 
     - name: Clone source code (修复浅克隆，拉取标签)
       run: |
-        # 移除 --depth 1，完整克隆仓库（包含标签）
         git clone $REPO_URL openwrt
         cd openwrt
-        # 先拉取所有标签，再切换到指定标签
         git fetch --tags
-        git checkout tags/$REPO_TAG -b build-branch  # 创建临时分支，避免detached HEAD
+        git checkout tags/$REPO_TAG -b build-branch
 
     - name: Load custom feeds
       run: |
@@ -46,15 +43,22 @@ jobs:
         chmod +x ../$DIY_P1_SH
         ../$DIY_P1_SH
 
-    - name: Update feeds
+    - name: Update feeds (增加容错，忽略非核心源错误)
       run: |
         cd openwrt
-        ./scripts/feeds update -a
+        # 先更新官方源，确保核心组件可用
+        ./scripts/feeds update core packages luci routing telephony
+        # 再更新第三方源，忽略错误（即使失败也继续）
+        ./scripts/feeds update kenzo small || true
 
-    - name: Install feeds (优先安装 opkg 相关组件)
+    - name: Install feeds (优先安装核心组件)
       run: |
         cd openwrt
+        # 优先安装官方核心组件
         ./scripts/feeds install -y opkg luci-base luci-app-opkg
+        # 安装第三方组件（SSR/PassWall2）
+        ./scripts/feeds install -y luci-app-ssr-plus luci-app-passwall2
+        # 安装剩余组件
         ./scripts/feeds install -a
 
     - name: Load custom configuration
@@ -79,6 +83,12 @@ jobs:
       run: |
         cd openwrt
         make -j1 V=s
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@main
+      with:
+        name: OpenWRT_firmware
+        path: openwrt/bin/targets/
 
     - name: Upload artifact
       uses: actions/upload-artifact@main
