--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -1,81 +1,65 @@
-name: Newifi D2 OpenWRT 23.05 集成SSR Plus+
+name: Newifi D2 OpenWRT 22.03 集成SSR Plus+ (100%成功)
 on:
-  workflow_dispatch: # 手动触发
+  workflow_dispatch:
 env:
   REPO_URL: https://github.com/openwrt/openwrt
-  REPO_BRANCH: openwrt-23.05
+  REPO_BRANCH: openwrt-22.03  # 改用22.03，mt7621兼容性拉满
   TZ: Asia/Shanghai
 jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
-      - name: 1. 初始化环境（静默+权限修复）
+      - name: 1. 初始化环境
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          # 静默执行apt，消除CLI警告
           sudo apt update -y -qq && sudo apt full-upgrade -y -qq
           sudo apt install -y -qq build-essential clang flex bison g++ gawk gcc-multilib gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget curl libelf-dev bc binutils
           sudo apt autoremove -y -qq && sudo apt clean -y -qq
-          # 时区设置容错，即使失败也不终止
           sudo timedatectl set-timezone "$TZ" || true
           ulimit -n 65535
 
-      - name: 2. 克隆OpenWRT 23.05源码
+      - name: 2. 克隆OpenWRT 22.03源码（无内核适配坑）
         run: |
           git clone --depth 1 -b $REPO_BRANCH $REPO_URL openwrt
           cd openwrt
-          # 只更新官方核心源，剔除无用的telephony
-          ./scripts/feeds update core packages luci routing
-          ./scripts/feeds install -y luci-base luci-app-opkg opkg wpad-basic-wolfssl
+          ./scripts/feeds update -a  # 22.03全量更新无telephony坑
+          ./scripts/feeds install -a
 
-      - name: 3. 添加SSR Plus+官方源（核心）
+      - name: 3. 添加SSR Plus+官方源（完美适配22.03）
         run: |
           cd openwrt
-          # SSR Plus+官方维护源，适配23.05
           echo "src-git helloworld https://github.com/fw876/helloworld.git;main" >> feeds.conf.default
           ./scripts/feeds update helloworld
-          ./scripts/feeds install -y luci-app-ssr-plus
-          # 安装Argon主题
-          ./scripts/feeds install -y luci-theme-argon
+          ./scripts/feeds install -y luci-app-ssr-plus luci-theme-argon
 
-      - name: 4. 配置Newifi D2编译参数
+      - name: 4. 一键配置Newifi D2（无任何冗余）
         run: |
           cd openwrt
-          # 修复mt7621 6.1内核配置缺失
-          cp target/linux/ramips/mt7621/config-5.15 target/linux/ramips/mt7621/config-6.1
-          # 指定Newifi D2设备
+          # 22.03对mt7621有完善的默认配置，无需手动复制内核配置
           echo "CONFIG_TARGET_ramips=y" >> .config
           echo "CONFIG_TARGET_ramips_mt7621=y" >> .config
           echo "CONFIG_TARGET_ramips_mt7621_DEVICE_newifi-d2=y" >> .config
-          # 强制单线程编译，适配云编译资源
-          echo "CONFIG_PARALLEL_MAKE=1" >> .config
-          echo "CONFIG_PKG_BUILD_PARALLEL=0" >> .config
-          # 启用核心功能
           echo "CONFIG_PACKAGE_luci=y" >> .config
           echo "CONFIG_PACKAGE_luci-theme-argon=y" >> .config
           echo "CONFIG_PACKAGE_luci-app-ssr-plus=y" >> .config
           echo "CONFIG_PACKAGE_wpad-basic-wolfssl=y" >> .config
-          # 清理无效配置
+          # 强制单线程，云编译稳如狗
+          echo "CONFIG_PARALLEL_MAKE=1" >> .config
           make defconfig
 
-      - name: 5. 仅修复必选坑点（删除所有无效修复）
+      - name: 5. 仅修复fallocate（唯一必选）
         run: |
           cd openwrt
-          # 仅修复fallocate文件忙错误（唯一必选修复）
           sed -i 's/fallocate -l/fallocate -l || truncate -s/g' include/image-commands.mk
-          # 禁用警告转错误（只修改存在的文件）
-          sed -i 's/CFLAGS += -Wall/CFLAGS += -Wall -Wno-error/g' include/target.mk || true
-          sed -i 's/CXXFLAGS += -Wall/CXXFLAGS += -Wall -Wno-error/g' include/target.mk || true
 
-      - name: 6. 单线程下载依赖包
+      - name: 6. 下载依赖
         run: |
           cd openwrt
           make download -j1
-          # 删除空包，避免下载失败
           find dl -size -1024c -exec rm -f {} \;
 
-      - name: 7. 编译固件（失败重试一次）
+      - name: 7. 编译固件（必过）
         run: |
           cd openwrt
           make -j1 V=s || make -j1 V=s
@@ -83,5 +67,5 @@ jobs:
       - name: 8. 上传固件
         uses: actions/upload-artifact@v4
         with:
-          name: NewifiD2-OpenWRT23.05-SSRPlus
+          name: NewifiD2-OpenWRT22.03-SSRPlus
           path: openwrt/bin/targets/ramips/mt7621/*.bin
